--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,6 @@
     <color name="primaryColor">#5B588F</color>
     <color name="secondryColor">#8E8D8D</color>
     <color name="textColor">#000000</color>
+    <color name="hintTextColor">#808080</color>
+    <color name="colorBlue">#180AB2</color>
 </resources>
