--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -150,6 +150,7 @@
         app:layout_constraintTop_toBottomOf="@id/RememberMebtn"
         >
         <Button
+            android:id="@+id/btnLogin"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:backgroundTint="@color/white"
@@ -174,7 +175,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Create an account"
-        android:layout_marginLeft="0dp"
+        android:layout_marginLeft="10dp"
         android:textColor="@color/colorBlue"
         app:layout_constraintStart_toEndOf="@id/textviewhaveanaccoutn"
         app:layout_constraintTop_toTopOf="@id/textviewhaveanaccoutn"
