--- a/app/src/main/res/layout/fragment_items_fragment.xml
+++ b/app/src/main/res/layout/fragment_items_fragment.xml
@@ -6,20 +6,30 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".Fragments.items_fragment">
     <include
-        android:id="@+id/items_searchbar"
-        layout="@layout/search_bar"
+        android:id="@+id/topBaritemBar"
+        layout="@layout/top_bar_home_page"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         />
+<!--    <include-->
+<!--        android:id="@+id/items_searchbar"-->
+<!--        layout="@layout/search_bar"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintTop_toBottomOf="@id/topBaritemBar"-->
+<!--        />-->
 
     <RelativeLayout
         android:id="@+id/relativeLayoutdiv2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="20.dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/items_searchbar"
+        app:layout_constraintTop_toBottomOf="@id/topBaritemBar"
         >
         <TextView
             android:layout_width="wrap_content"
@@ -61,7 +71,6 @@
         android:text="There is no Items"
         android:textSize="30dp"
         android:fontFamily="@font/poppins_black"
-        app:layout_constraintTop_toBottomOf="@id/items_searchbar"
         app:layout_constraintBottom_toBottomOf="parent"
 
         />
