--- a/app/src/main/res/layout/top_bar_home_page.xml
+++ b/app/src/main/res/layout/top_bar_home_page.xml
@@ -30,7 +30,7 @@
 
                 />
 
-            <com.google.android.material.search.SearchBar
+            <SearchView
                 android:id="@+id/search_bar"
                 android:layout_width="150dp"
                 android:layout_height="40dp"
@@ -42,6 +42,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:navigationIcon="@drawable/search_icon"
                 app:navigationIconTint="@color/black"
+                android:background="@drawable/roundedcornershape"
                 android:backgroundTint="@color/primaryColor"
                 />
 
