color pallate changes

--- a/app/src/main/res/layout/item_show_list_layout.xml
+++ b/app/src/main/res/layout/item_show_list_layout.xml
@@ -16,6 +16,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="ItemId#:"
+            android:textColor="@color/whiteTextColor"
             android:fontFamily="@font/poppins_black"
             android:textSize="20dp"
             app:layout_constraintStart_toStartOf="parent"
@@ -27,7 +28,7 @@
             android:layout_height="wrap_content"
             android:text="1234567654"
             android:fontFamily="@font/poppins_medium"
-            android:textColor="@color/green"
+            android:textColor="@color/primaryColor"
             android:textSize="20dp"
             app:layout_constraintStart_toEndOf="@id/itemShowItemIDTag"
             app:layout_constraintTop_toTopOf="@id/itemShowItemIDTag"
@@ -38,6 +39,7 @@
             android:layout_height="wrap_content"
             android:text="Name:"
             android:textSize="15dp"
+            android:textColor="@color/whiteTextColor"
             app:layout_constraintTop_toBottomOf="@id/itemShowItemIDTag"
             app:layout_constraintStart_toStartOf="@id/itemShowItemIDTag"
 
@@ -47,6 +49,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="xyz"
+            android:textColor="@color/whiteTextColor"
             app:layout_constraintStart_toEndOf="@id/itemShowNameTag"
             app:layout_constraintTop_toTopOf="@id/itemShowNameTag"
             app:layout_constraintBottom_toBottomOf="@id/itemShowNameTag"
@@ -59,6 +62,7 @@
             app:layout_constraintTop_toTopOf="parent"
             android:layout_margin="10dp"
             android:padding="10dp"
+
             android:background="@drawable/delete_btn_bg"
             android:src="@drawable/delteicon"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -69,6 +73,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Quntity available:"
+            android:textColor="@color/whiteTextColor"
             android:fontFamily="@font/poppins_black"
             app:layout_constraintTop_toBottomOf="@id/itemShowNameTag"
             app:layout_constraintStart_toStartOf="@id/itemShowNameTag"
@@ -78,6 +83,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="0"
+            android:textColor="@color/whiteTextColor"
             android:fontFamily="@font/poppins_medium"
             app:layout_constraintStart_toEndOf="@id/itemShowQuntityTag"
             app:layout_constraintTop_toTopOf="@id/itemShowQuntityTag"
