--- a/app/src/main/res/layout/bottom_navbar.xml
+++ b/app/src/main/res/layout/bottom_navbar.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@color/bottomNavBarColor"
     >
 
     <ImageButton
@@ -25,7 +26,7 @@
                 app:layout_constraintStart_toEndOf="@id/itemOne"
                 app:layout_constraintTop_toTopOf="@id/itemOne"
                 app:layout_constraintBottom_toBottomOf="@id/itemOne"
-                app:layout_constraintEnd_toStartOf="@id/NewOrderbtn"
+                app:layout_constraintEnd_toStartOf="@id/NewOderBtnCardView"
                 android:gravity="center"
                 android:src="@drawable/clienticon"
                 android:backgroundTint="@android:color/transparent"
@@ -38,7 +39,7 @@
         app:layout_constraintEnd_toStartOf="@id/itemFour"
         app:layout_constraintTop_toTopOf="@id/itemFour"
         app:layout_constraintBottom_toBottomOf="@id/itemFour"
-        app:layout_constraintStart_toEndOf="@id/NewOrderbtn"
+        app:layout_constraintStart_toEndOf="@id/NewOderBtnCardView"
         android:src="@drawable/itemsicon"
         android:backgroundTint="@android:color/transparent"
         />
@@ -55,23 +56,34 @@
         app:layout_constraintStart_toEndOf="@id/itemthree"
 
         />
-
+    <androidx.cardview.widget.CardView
+        android:id="@+id/NewOderBtnCardView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        app:cardCornerRadius="50dp"
+        app:cardElevation="100dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        >
 
         <ImageButton
             android:id="@+id/NewOrderbtn"
             android:layout_width="70dp"
             android:layout_height="70dp"
             android:layout_alignParentEnd="true"
-            android:backgroundTint="@color/primaryColor"
+            android:backgroundTint="@color/secondryColor"
             android:contentDescription="FloatingButton"
             android:src="@drawable/inovice_icon"
             android:background="@drawable/circle_shape"
-            android:elevation="60dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
+
             />
+    </androidx.cardview.widget.CardView>
+
+
+
 
 
 
