--- a/app/src/main/res/layout/fragment_items_fragment.xml
+++ b/app/src/main/res/layout/fragment_items_fragment.xml
@@ -4,7 +4,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".Fragments.items_fragment">
+    tools:context=".Fragments.items_fragment"
+    android:background="@color/thirdColor"
+    >
     <include
         android:id="@+id/topBaritemBar"
         layout="@layout/top_bar_home_page"
@@ -37,6 +39,7 @@
             android:text="@string/item_lists"
             android:textSize="30dp"
             android:layout_marginLeft="10dp"
+            android:textColor="@color/whiteTextColor"
             android:fontFamily="@font/poppins_black"
             android:layout_alignParentStart="true"
             />
