--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,9 +6,29 @@
     <color name="green" >#2c9f1c</color>
     <color name="red">#C80101</color>
 
-    <color name="primaryColor">#5B588F</color>
-    <color name="secondryColor">#8E8D8D</color>
-    <color name="textColor">#000000</color>
+<!--    <color name="primaryColor">#5B588F</color>-->
+    <color name="primaryColor">#8AC186</color>
+<!--    <color name="secondryColor">#C0BDEA</color>-->
+    <color name="secondryColor">#17181C</color>
+<!--    <color name="bottomNavBarColor">#D017181C</color>-->
+    <color name="bottomNavBarColor">#8AC186</color>
+
+<!--    <color name="secondryColor">#B517181C</color>-->
+<!--    <color name="thirdColor">#23232C</color>-->
+    <color name="thirdColor">#575763</color>
+
+    <color name="fourth">#1A1C22</color>
+
+<!--    <color name="secondryColor">#A06DC5</color>-->
+    <color name="whiteTextColor">#ffff</color>
+    <color name="BlackTextColor">#FF000000</color>
     <color name="hintTextColor">#808080</color>
     <color name="colorBlue">#180AB2</color>
 </resources>
+
+<!--
+[10/10, 1:05 PM] Gaurav🧿 Harpalpur: #8AC186
+[10/10, 1:06 PM] Gaurav🧿 Harpalpur: #17181C
+[10/10, 1:06 PM] Gaurav🧿 Harpalpur: #23232C
+#1A1C22
+-->
