--- a/app/src/main/res/layout/top_bar_home_page.xml
+++ b/app/src/main/res/layout/top_bar_home_page.xml
@@ -32,19 +32,17 @@
 
                 />
 
-            <SearchView
+            <androidx.appcompat.widget.SearchView
                 android:id="@+id/search_bar"
-                android:layout_width="150dp"
+                android:layout_width="200dp"
                 android:layout_height="40dp"
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="5dp"
                 android:layout_marginBottom="5dp"
+                android:textAppearance="@color/white"
                 app:layout_constraintStart_toEndOf="@id/bellIcon_btn"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:navigationIcon="@drawable/search_icon"
-                app:navigationIconTint="@color/white"
-
                 android:background="@drawable/roundedcornershape"
                 android:backgroundTint="@color/thirdColor"
                 />
