--- a/app/src/main/res/layout-v26/activity_add_item.xml
+++ b/app/src/main/res/layout-v26/activity_add_item.xml
@@ -22,7 +22,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:text="Add Item"
-        android:textSize="40dp"
+        android:textSize="40sp"
         android:textColor="@color/green"
         android:textStyle="bold"
         android:autoSizeTextType="uniform"
